--- a/about.css
+++ b/about.css
@@ -64,6 +64,8 @@ body p{
 #team-pic{
     position: relative;
     block-size:15rem ;
+    border-radius: 100%;
+    width:100%;
 }
 .main-footer-container{
     background-color: #333;;
