--- a/contact.css
+++ b/contact.css
@@ -38,11 +38,13 @@ body p{
     color: white;
 }
 
+.container-contacts{
+    height: 80vh;
+    padding-top:10%;
+    padding-bottom: 10%;
+}
 
 .contact-form{
-    background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
     width: 70%;
 }
 .contact-form .form-control{
