--- a/contact.css
+++ b/contact.css
@@ -39,7 +39,7 @@ body p{
 }
 
 .container-contacts{
-    height: 100vh;
+    height: auto;
     padding-top:10%;
     padding-bottom: 10%;
 }
@@ -53,6 +53,7 @@ body p{
 .contact-image{
     text-align: center;
 }
+
 .contact-image img{
     border-radius: 6rem;
     width: 11%;
